[project]
name = "server"
version = "0.5.3"
requires-python = ">=3.11"
dependencies = [
    "blinker",
    "click",
    "flask",
    "flask-sock",
    "gevent",
    "greenlet",
    "h11",
    "itsdangerous",
    "jinja2",
    "markupsafe",
    "python-dotenv",
    "python-magic>=0.4.27",
    "setuptools",
    "simple-websocket",
    "websockets",
    "werkzeug",
    "wsproto",
    "zope-event",
    "zope-interface",
    "bcrypt>=4.0.0",
    "flask-cors>=4.0.0",
    "marshmallow>=3.20.0",
    "pyyaml>=6.0.0",
    "requests>=2.33.0",
]

[project.optional-dependencies]
redis = ["redis>=5.0.7"]

[project.scripts]
serve = "server.app:main"
serve-ws = "server.ws_app:main"

[dependency-groups]
dev = [
    "black==26.3.1",
    "flake8>=7.0.0",
    "isort>=5.13.2",
    "pytest>=9.0.1",
    "coverage[toml]>=7.4.0",
    "pytest-cov>=6.0.0",
    "playwright>=1.40",
    "pytest-playwright>=0.4",
    "redis>=5.0.7",
]

[tool.isort]
profile = "black"
line_length = 100

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["."]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = true
