[project]
name = "server"
version = "0.6.0"
requires-python = ">=3.11"
dependencies = [
    "blinker",
    "click",
    "flask",
    "flask-sock",
    "gevent",
    "greenlet",
    "h11",
    "itsdangerous",
    "jinja2",
    "markupsafe",
    "python-dotenv",
    "python-magic>=0.4.27",
    "setuptools",
    "simple-websocket",
    "websockets",
    "werkzeug",
    "wsproto",
    "zope-event",
    "zope-interface",
    "bcrypt>=5.0.0",
    "flask-cors>=6.0.2",
    "marshmallow>=4.3.0",
    "pyyaml>=6.0.3",
    "requests>=2.33.1",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
redis = ["redis>=7.4.0"]

[project.scripts]
serve = "server.app:main"
serve-ws = "server.ws_app:main"

[dependency-groups]
dev = [
    "black==26.3.1",
    "flake8>=7.3.0",
    "isort>=8.0.1",
    "pytest>=9.0.3",
    "coverage[toml]>=7.13.5",
    "pytest-cov>=7.1.0",
    "playwright>=1.58.0",
    "pytest-playwright>=0.7.2",
    "redis>=7.4.0",
]

[tool.isort]
profile = "black"
line_length = 100

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "ws_auth_raw_seed: opt out of ws_auth autouse preset so the seeding-from-env path can be exercised",
]

[tool.coverage.run]
branch = true
source = ["."]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = true
